# pipeline-avaliacao-filmes

./: .env  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
object-storage/.minio.sys/: format.json
scripts/: create_bucket.py
scripts/extract/: kaggle_extraction.py  notebook_test.ipynb
scripts/transform/: movie_titles_filter.py
