[project]
name = "pipeline-avaliacao-filmes"
version = "0.1.0"
description = "Data Engineering pipeline for movies avaliations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.91",
    "duckdb>=1.5.2",
    "kagglehub>=1.0.0",
    "logging>=0.4.9.6",
    "minio>=7.2.20",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
